# advent-of-code-2024

./: .gitignore  CMakeLists.txt  Cargo.toml  gleam.toml  manifest.toml  package-lock.json  package.json  packages.dhall  spago.dhall
day1/: solution.js  solution1.js  solution2.js
day10/: solution1.js  solution2.js
day11/: solution1.gleam  solution2.gleam
day12/: solution1.gleam  solution2.gleam
day13/: solution1.gleam  solution2.gleam
day14/: input0  solution1.gleam  solution2.js
day15/: solution1.gleam  solution2.gleam
day16/: solution1.gleam  solution2.gleam
day17/: input1  program.js  solution1.gleam  solution2.js
day18/: solution1.gleam  solution1_cooler.gleam  solution2.gleam
day19/: solution1.gleam  solution2.gleam
day2/: solution1.js  solution2.js
day20/: solution1.gleam  solution2.gleam
day21/: solution1.gleam  solution2.gleam
day22/: solution1.gleam  solution2.gleam
day23/: solution1.gleam  solution2.gleam
day24/: input1-modif  solution1.gleam  solution2.gleam  solution2.js
day25/: solution2.gleam
day3/: solution1.js  solution2.js
day4/: solution1.js  solution2.js
day5/: solution1.js  solution2.js
day6/: lib.assert.js  lib.js  solution1.c  solution1.js  solution2.c  solution2.js
day7/: solution1.js  solution2.js
day8/: solution1.js  solution2.js
day9/: solution1.gleam  solution2.gleam
src/: advent_of_code_2024.gleam  day11  day12  day13  day14  day15  day16  day17  day18  day19  day20  day21  day22  day23  day24  day25  day9  main.rs  util.gleam
util/: array.c  array.h  index.js  template.js  util.gleam
